# research_notes

./: .gitignore  Cargo.toml  LICENSE  README.md
bitcoin/bitvm2/: CovenantCommittee.md
bitcoin/bitvm3/: cut_and_choose.ipynb  dv_kzg.md  dv_snark.md  half_gate.ipynb  half_gate.md  it_mac.md  rsa.md  soldering.md
coding_theory/: Chapter1_ShannonTheory.md  Chapter2_FiniteFields.md
crates/koblitz-curves/: Cargo.toml  koblitz.md  tau.md
crates/koblitz-curves/src/: integer_quadratic.rs  lib.rs  scalar_field.rs
crates/koblitz-curves/src/binary_curve/: curve.rs  k233.rs  koblitz_tau.rs  mod.rs
crates/koblitz-curves/src/binary_curve/koblitz_tau/: mod.rs  r_tau.rs  z_tau.rs
crates/koblitz-curves/src/binary_field/: field.rs  fq.rs  fq163.rs  fq233.rs  fr233.rs  mod.rs  polynomial.rs  word.rs
crates/koblitz-curves/src/tau_expansion/: integer_quadratic.rs  mod.rs  rational_quadratic.rs  scalar_field.rs  tau.rs
crates/special-curves/: Cargo.toml
crates/special-curves/src/: delta.rs  integer_quadratic.rs  lib.rs  rational.rs  rational_quadratic.rs  scalar_field.rs  tau.rs  tau.rs.bak  tau_adic.rs  tau_new.rs  tau_new.rs.bak  traits.rs
crates/special_curves/: Cargo.toml
crates/special_curves/src/: lib.rs
notes/: Untitled.ipynb  revisiting_pbc.ipynb
notes/bitcoin/bitvm3/: bra13.md  garble_circuit.md  gc.ipynb  pari.md  rsa.ipynb  soldering.md
notes/coding_theory/: Chapter1_ShannonTheory.md
notes/coding_theory/cyclotomic_polynomial/: cyclotomic_polynomial.ipynb
notes/lattice/: conceptions.md  tutorial.md
