[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/PayneJoe/research_notes.git"
license = "MIT"

[workspace]
resolver = "3"
members = ["crates/koblitz-curves"]

[workspace.dependencies]
num-rational = "0.4"
derive_builder = "0.20"
hex = "0.4"
rand = "0.9.2"

[profile.dev]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
