[package]
name = "koblitz-curves"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
num-rational = { workspace = true }
derive_builder = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
